# ggn

./: LICENSE  README.md  pyproject.toml
assets/eqs/: Makefile  symbols.tex
assets/eqs/auto/: bma.el  doc.el  song2014.el  symbols.el
data/adjs/: bp!adj.npz  cc!adj.npz  mf!adj.npz
data/embs/d10/: bp_Diagonal_diag.npy  bp_Diagonal_mean.npy  bp_LowRank1_covm.npy  bp_LowRank1_diag.npy  bp_LowRank1_mean.npy  bp_LowRank2_covm.npy  bp_LowRank2_diag.npy  bp_LowRank2_mean.npy  bp_LowRank3_covm.npy  bp_LowRank3_diag.npy  bp_LowRank3_mean.npy  bp_LowRank4_diag.npy  bp_LowRank4_mean.npy  cc_Diagonal_diag.npy  cc_Diagonal_mean.npy  cc_LowRank1_covm.npy  cc_LowRank1_diag.npy  cc_LowRank1_mean.npy  cc_LowRank2_covm.npy  cc_LowRank2_diag.npy  cc_LowRank2_mean.npy  cc_LowRank3_covm.npy  cc_LowRank3_diag.npy  cc_LowRank3_mean.npy  cc_LowRank4_covm.npy  cc_LowRank4_diag.npy  cc_LowRank4_mean.npy  mf_Diagonal_diag.npy  mf_Diagonal_mean.npy  mf_LowRank1_covm.npy  mf_LowRank1_diag.npy  mf_LowRank1_mean.npy  mf_LowRank2_covm.npy  mf_LowRank2_diag.npy  mf_LowRank2_mean.npy  mf_LowRank3_covm.npy  mf_LowRank3_diag.npy  mf_LowRank3_mean.npy  (+3 more)
data/spls/: bp!spmat.npz  cc!spmat.npz  mf!spmat.npz
ggn/: TOYGRAPH_covms.npy  TOYGRAPH_diags.npy  TOYGRAPH_means.npy  __init__.py  cli.py  distances.py  models.py  toy.npz  utils.py
nbs/: 00-calculate-shortest-path-lengths-for-a-toy-graph.ipynb  01-generating-shortest-path-matrices-for-GO.ipynb  02-toy-graphs.ipynb  03-building-Gaussian-embeddings-from-scratch.ipynb  04-evaluation-KL.ipynb  05-evaluation-entropy.ipynb  06-using-gGN-on-Python.ipynb
(+60 files in other folders)
